fix background image (appearance: none)

--- a/style.scss
+++ b/style.scss
@@ -63,6 +63,7 @@
       align-items: center;
       justify-content: center;
       margin-bottom: 40px;
+      appearance: none;
       .header-content{
           color: white;
           z-index: 1;
