--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -153,6 +153,9 @@ header {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 40px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 header .header-content {
