--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -140,7 +140,7 @@ header {
   position: relative;
   width: 100%;
   height: 560px;
-  background-image: url(../../assets/images/header/img-header-malang.jpg);
+  background-image: url(../../assets/images/header/img-header-malang.jpg) !important;
   background-size: cover;
   background-position: center;
   display: -webkit-box;
@@ -153,6 +153,8 @@ header {
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 40px;
+  -moz-appearace: none;
+  -webkit-appearace: none;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
