--- a/style.scss
+++ b/style.scss
@@ -57,8 +57,13 @@
       width: 100%;
       height: 560px;
       background-image: url(../../assets/images/header/img-header-malang.jpg) !important;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
       background-size: cover;
+      background-attachment: scroll;
       background-position: center;
+      background-repeat: no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
