--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
   }
   
   body{
@@ -57,10 +58,7 @@
       width: 100%;
       height: 560px;
       background-image: url(../../assets/images/header/img-header-malang.jpg) !important;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
+      @include vendor-prefix('background-image','cover');
       background-attachment: scroll;
       background-position: center;
       background-repeat: no-repeat;
