--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -41,6 +41,8 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 @media (min-width: 800px) {
@@ -141,7 +143,11 @@ header {
   width: 100%;
   height: 560px;
   background-image: url(../../assets/images/header/img-header-malang.jpg) !important;
-  background-size: cover;
+  -webkit-background-image: cover;
+  -moz-background-image: cover;
+  -ms-background-image: cover;
+  -o-background-image: cover;
+  background-image: cover;
   background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
