--- a/style.scss
+++ b/style.scss
@@ -58,7 +58,7 @@
       width: 100%;
       height: 560px;
       background-image: url(../../assets/images/header/img-header-malang.jpg) !important;
-      @include vendor-prefix('background-image','cover');
+      @include vendor-prefix('background-image','contain');
       background-attachment: scroll;
       background-position: center;
       background-repeat: no-repeat;
