set background image header to 100%

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -142,13 +142,12 @@ header {
   position: relative;
   width: 100%;
   height: 560px;
-  background-image: url(../../assets/images/header/img-header-malang.jpg) !important;
-  -webkit-background-image: contain;
-  -moz-background-image: contain;
-  -ms-background-image: contain;
-  -o-background-image: contain;
-  background-image: contain;
-  background-attachment: scroll;
+  background-image: url(../../assets/images/header/img-header-malang-desktop.jpg) !important;
+  -webkit-background-image: 100%;
+  -moz-background-image: 100%;
+  -ms-background-image: 100%;
+  -o-background-image: 100%;
+  background-image: 100%;
   background-position: center;
   background-repeat: no-repeat;
   display: -webkit-box;
