--- a/style.scss
+++ b/style.scss
@@ -57,9 +57,8 @@
       position: relative;
       width: 100%;
       height: 560px;
-      background-image: url(../../assets/images/header/img-header-malang.jpg) !important;
-      @include vendor-prefix('background-image','contain');
-      background-attachment: scroll;
+      background-image: url(../../assets/images/header/img-header-malang-desktop.jpg) !important;
+      @include vendor-prefix('background-image','100%');
       background-position: center;
       background-repeat: no-repeat;
       display: flex;
