--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -143,11 +143,8 @@ header {
   width: 100%;
   height: 560px;
   background-image: url(../../assets/images/header/img-header-malang-desktop.jpg) !important;
-  -webkit-background-image: 100%;
-  -moz-background-image: 100%;
-  -ms-background-image: 100%;
-  -o-background-image: 100%;
-  background-image: 100%;
+  -ms-background-size: 100%;
+  background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
   display: -webkit-box;
