--- a/_variable.scss
+++ b/_variable.scss
@@ -53,6 +53,6 @@ $media-small: 360px;
 
 @mixin vendor-prefix($name, $value) {
     @each $vendor in ('-webkit-', '-moz-', '-ms-', '-o-', '') {
-      #{$vendor}#{$name}: #{$value};
+      #{$vendor}#{$name}: #{$value}  !important;
     }
   }
