--- a/style.scss
+++ b/style.scss
@@ -58,7 +58,7 @@
       width: 100%;
       height: 560px;
       background-image: url(../../assets/images/header/img-header-malang-desktop.jpg) !important;
-      @include vendor-prefix('background-size','100%');
+      @include vendor-prefix('background-size','cover');
       background-position: center;
       background-repeat: no-repeat;
       display: flex;    
@@ -68,6 +68,7 @@
       -moz-appearace:none;
       -webkit-appearace:none;
       appearance: none;
+      z-index: -9999;
       .header-content{
           color: white;
           z-index: 1;
