--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -143,8 +143,8 @@ header {
   width: 100%;
   height: 560px;
   background-image: url(../../assets/images/header/img-header-malang-desktop.jpg) !important;
-  -ms-background-size: 100% !important;
-  background-size: 100% !important;
+  -ms-background-size: cover !important;
+  background-size: cover !important;
   background-position: center;
   background-repeat: no-repeat;
   display: -webkit-box;
@@ -162,6 +162,7 @@ header {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
+  z-index: -9999;
 }
 
 header .header-content {
