--- a/style.scss
+++ b/style.scss
@@ -57,8 +57,7 @@
       position: relative;
       width: 100%;
       height: 560px;
-      background-image: url(../../assets/images/header/img-header-malang-desktop.jpg) !important;
-      @include vendor-prefix('background-size','cover');
+      background-image: url(../../assets/images/header/img-header-malang-mobile.jpg) !important;
       background-position: center;
       background-repeat: no-repeat;
       display: flex;    
@@ -229,7 +228,11 @@
     }
 
     @media (min-width: 800px){
+        header{
+            background-image: url(../../assets/images/header/img-header-malang-desktop.jpg);
+            @include vendor-prefix('background-size','cover');
 
+        }
         .best-hotel-scroll-wrapper{
             width: 90% !important;
             display: grid !important;
