--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -142,9 +142,7 @@ header {
   position: relative;
   width: 100%;
   height: 560px;
-  background-image: url(../../assets/images/header/img-header-malang-desktop.jpg) !important;
-  -ms-background-size: cover !important;
-  background-size: cover !important;
+  background-image: url(../../assets/images/header/img-header-malang-mobile.jpg) !important;
   background-position: center;
   background-repeat: no-repeat;
   display: -webkit-box;
@@ -349,6 +347,11 @@ main .hotel-wrapper.last {
 }
 
 @media (min-width: 800px) {
+  header {
+    background-image: url(../../assets/images/header/img-header-malang-desktop.jpg);
+    -ms-background-size: cover !important;
+    background-size: cover !important;
+  }
   .best-hotel-scroll-wrapper {
     width: 90% !important;
     display: -ms-grid !important;
