--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -142,7 +142,7 @@ header {
   position: relative;
   width: 100%;
   height: 560px;
-  background-image: url(../../assets/images/header/img-header-malang-mobile.jpg) !important;
+  background-image: url(../../assets/images/header/img-header-malang-mobile.png);
   background-position: center;
   background-repeat: no-repeat;
   display: -webkit-box;
