--- a/style.scss
+++ b/style.scss
@@ -57,7 +57,7 @@
       position: relative;
       width: 100%;
       height: 560px;
-      background-image: url(../../assets/images/header/img-header-malang-mobile.jpg) !important;
+      background-image: url(../../assets/images/header/img-header-malang-mobile.png) ;
       background-position: center;
       background-repeat: no-repeat;
       display: flex;    
@@ -231,7 +231,6 @@
         header{
             background-image: url(../../assets/images/header/img-header-malang-desktop.jpg);
             @include vendor-prefix('background-size','cover');
-
         }
         .best-hotel-scroll-wrapper{
             width: 90% !important;
