--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@
   
   body{
       @include font-size($media-medium);
+      min-height: 100%;
   }
 
   nav{
@@ -57,17 +58,19 @@
       position: relative;
       width: 100%;
       height: 560px;
-      background-image: url(../../assets/images/header/img-header-malang-mobile.png) ;
-      background-position: center;
+      background-image: url(../../assets/images/header/img-header-malang-desktop.jpg);
+      @include vendor-prefix('background-size','cover');
+      background-position: center center;
       background-repeat: no-repeat;
-      display: flex;    
+      background-attachment: fixed;
+      background-color: blue;
+      display: flex;
       align-items: center;
       justify-content: center;
       margin-bottom: 40px;
       -moz-appearace:none;
       -webkit-appearace:none;
       appearance: none;
-      z-index: -9999;
       .header-content{
           color: white;
           z-index: 1;
@@ -228,10 +231,7 @@
     }
 
     @media (min-width: 800px){
-        header{
-            background-image: url(../../assets/images/header/img-header-malang-desktop.jpg);
-            @include vendor-prefix('background-size','cover');
-        }
+
         .best-hotel-scroll-wrapper{
             width: 90% !important;
             display: grid !important;
