--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -45,6 +45,10 @@
           box-sizing: border-box;
 }
 
+body {
+  min-height: 100%;
+}
+
 @media (min-width: 800px) {
   body h1 {
     font-size: 3rem;
@@ -142,9 +146,13 @@ header {
   position: relative;
   width: 100%;
   height: 560px;
-  background-image: url(../../assets/images/header/img-header-malang-mobile.png);
-  background-position: center;
+  background-image: url(../../assets/images/header/img-header-malang-desktop.jpg);
+  -ms-background-size: cover !important;
+  background-size: cover !important;
+  background-position: center center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: blue;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -160,7 +168,6 @@ header {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  z-index: -9999;
 }
 
 header .header-content {
@@ -347,11 +354,6 @@ main .hotel-wrapper.last {
 }
 
 @media (min-width: 800px) {
-  header {
-    background-image: url(../../assets/images/header/img-header-malang-desktop.jpg);
-    -ms-background-size: cover !important;
-    background-size: cover !important;
-  }
   .best-hotel-scroll-wrapper {
     width: 90% !important;
     display: -ms-grid !important;
