--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -85,27 +84,17 @@ body {
 nav {
   width: 100%;
   height: 80px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .nav-container {
   width: 90%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   margin: 0 auto;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 .logo {
@@ -116,16 +105,9 @@ nav {
 .hamburger-button {
   width: 2.5rem;
   height: 1.25rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hamburger {
@@ -146,28 +128,20 @@ header {
   position: relative;
   width: 100%;
   height: 560px;
-  background-image: url(../../assets/images/header/img-header-malang-desktop.jpg);
+  background-image: url(../assets/images/header/img-header-malang-desktop.jpg);
   -ms-background-size: cover !important;
   background-size: cover !important;
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-color: blue;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   margin-bottom: 40px;
   -moz-appearace: none;
   -webkit-appearace: none;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
+  appearance: none;
 }
 
 header .header-content {
@@ -185,15 +159,9 @@ header h1 {
 header .header-button {
   width: 135px;
   height: 35px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
   opacity: 90%;
 }
@@ -203,7 +171,6 @@ header a {
   text-decoration: none;
   border-radius: 5px;
   display: inline-block;
-  background: -webkit-gradient(linear, left top, right bottom, from(#3154ff), to(#0090ff));
   background: linear-gradient(to bottom right, #3154ff, #0090ff);
   font-family: 'montserrat semibold';
   letter-spacing: 1px;
@@ -215,8 +182,6 @@ main .main-head-container {
 }
 
 main .best-hotel-title-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-top: 40px;
   margin-bottom: 20px;
@@ -235,8 +200,7 @@ main .hotel-container {
   border-radius: 5px;
   overflow: hidden;
   background-color: #f3f3f3;
-  -webkit-box-shadow: 6px 6px 5px #19007421;
-          box-shadow: 6px 6px 5px #19007421;
+  box-shadow: 6px 6px 5px #19007421;
 }
 
 main .hotel-image {
@@ -268,7 +232,6 @@ main .hotel-image-content .hotel-rating img {
 main .hotel-image-overlay {
   width: 100%;
   height: 90%;
-  background: -webkit-gradient(linear, left bottom, left top, from(#000000), to(#00000000));
   background: linear-gradient(to top, #000000, #00000000);
   position: absolute;
   bottom: 0;
@@ -282,17 +245,11 @@ main img:not(.check) {
 main .hotel-content {
   width: 100%;
   height: 55px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 90%;
   margin: auto;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
 
 main .hotel-content p {
@@ -307,18 +264,11 @@ main .book-hotel-button a {
   color: white;
   text-decoration: none;
   display: inline-block;
-  background: -webkit-gradient(linear, left top, right top, from(#3154ff), to(#0090ff));
   background: linear-gradient(to right, #3154ff, #0090ff);
   border-radius: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   font-family: 'montserrat regular';
   letter-spacing: .5px;
 }
@@ -336,8 +286,6 @@ main .best-hotel-scroll-wrapper::-webkit-scrollbar {
 }
 
 main .hotel-wrapper {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
 }
 
@@ -356,10 +304,8 @@ main .hotel-wrapper.last {
 @media (min-width: 800px) {
   .best-hotel-scroll-wrapper {
     width: 90% !important;
-    display: -ms-grid !important;
     display: grid !important;
-    -ms-grid-columns: 1fr 1fr;
-        grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 15px;
     margin: 0 auto;
     overflow-x: visible !important;
@@ -385,8 +331,7 @@ main .hotel-wrapper.last {
 
 @media (min-width: 1000px) {
   .best-hotel-scroll-wrapper {
-    -ms-grid-columns: 1fr 1fr 1fr;
-        grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 /*# sourceMappingURL=style.css.map */
