--- a/style.scss
+++ b/style.scss
@@ -58,7 +58,7 @@
       position: relative;
       width: 100%;
       height: 560px;
-      background-image: url(../../assets/images/header/img-header-malang-desktop.jpg);
+      background-image: url(../assets/images/header/img-header-malang-desktop.jpg);
       @include vendor-prefix('background-size','cover');
       background-position: center center;
       background-repeat: no-repeat;
