--- a/css/style.css
+++ b/css/style.css
@@ -129,8 +129,8 @@ header {
   width: 100%;
   height: 560px;
   background-image: url(../assets/images/header/img-header-malang-desktop.jpg);
-  -ms-background-size: cover !important;
-  background-size: cover !important;
+  -ms-background-size: 100%;
+  background-size: 100%;
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -302,6 +302,10 @@ main .hotel-wrapper.last {
 }
 
 @media (min-width: 800px) {
+  header {
+    -ms-background-size: cover;
+    background-size: cover;
+  }
   .best-hotel-scroll-wrapper {
     width: 90% !important;
     display: grid !important;
