--- a/style.scss
+++ b/style.scss
@@ -59,7 +59,7 @@
       width: 100%;
       height: 560px;
       background-image: url(../assets/images/header/img-header-malang-desktop.jpg);
-      @include vendor-prefix('background-size','cover');
+      @include vendor-prefix('background-size','100%');
       background-position: center center;
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -231,7 +231,9 @@
     }
 
     @media (min-width: 800px){
-
+        header{
+            @include vendor-prefix('background-size','cover');
+        }
         .best-hotel-scroll-wrapper{
             width: 90% !important;
             display: grid !important;
