--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ nav {
 .header-overlay {
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: blue;
   opacity: 20%;
   position: absolute;
 }
