--- a/css/style.css
+++ b/css/style.css
@@ -116,14 +116,6 @@ nav {
   background-color: #1a1a1a;
 }
 
-.header-overlay {
-  width: 100%;
-  height: 100%;
-  background-color: blue;
-  opacity: 20%;
-  position: absolute;
-}
-
 header {
   position: relative;
   width: 100%;
@@ -144,9 +136,18 @@ header {
   appearance: none;
 }
 
+header .header-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 20%;
+  position: absolute;
+  z-index: 99;
+}
+
 header .header-content {
   color: white;
-  z-index: 1;
+  z-index: 9999;
 }
 
 header h1 {
