--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,8 @@ header {
   width: 100%;
   height: 560px;
   background-image: url(../assets/images/header/img-header-malang-desktop.jpg);
-  -ms-background-size: 100%;
-  background-size: 100%;
+  -ms-background-size: cover;
+  background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -139,8 +139,7 @@ header {
 header .header-overlay {
   width: 100%;
   height: 100%;
-  background-color: black;
-  opacity: 20%;
+  background-color: rgba(0, 0, 0, 0.2);
   position: absolute;
   z-index: 99;
 }
