--- a/style.scss
+++ b/style.scss
@@ -53,7 +53,7 @@
       width: 100%;
       height: 560px;
       background-image: url(../assets/images/header/img-header-malang-desktop.jpg);
-      @include vendor-prefix('background-size','100%');
+      @include vendor-prefix('background-size','cover');
       background-position: center center;
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -69,15 +69,16 @@
       .header-overlay{
         width: 100%;
         height: 100%;
-        background-color: black;
-        opacity: 20%;
+        background-color: rgba($color: #000000, $alpha: 0.2);
         position: absolute;
         z-index: 99;
         }
+
       .header-content{
           color: white;
           z-index: 9999;
       }
+
       h1{
           width: 90%;
           text-align: center;
