--- a/css/style.css
+++ b/css/style.css
@@ -120,13 +120,6 @@ header {
   position: relative;
   width: 100%;
   height: 560px;
-  background-image: url(../assets/images/header/img-header-malang-desktop.jpg);
-  -ms-background-size: cover;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-color: blue;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -134,6 +127,21 @@ header {
   -moz-appearace: none;
   -webkit-appearace: none;
   appearance: none;
+}
+
+header .header-background {
+  width: 100%;
+  height: 100%;
+  background-image: url(../assets/images/header/img-header-malang-desktop.jpg);
+  -ms-background-size: cover;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: blue;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 header .header-overlay {
