--- a/style.scss
+++ b/style.scss
@@ -52,12 +52,6 @@
       position: relative;
       width: 100%;
       height: 560px;
-      background-image: url(../assets/images/header/img-header-malang-desktop.jpg);
-      @include vendor-prefix('background-size','cover');
-      background-position: center center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-color: blue;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -66,6 +60,20 @@
       -webkit-appearace:none;
       appearance: none;
      
+      .header-background{
+        width: 100%;
+        height: 100%;
+        background-image: url(../assets/images/header/img-header-malang-desktop.jpg);
+        @include vendor-prefix('background-size','cover');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-color: blue;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
       .header-overlay{
         width: 100%;
         height: 100%;
